@@ -44,3 +44,7 @@
 #endif
 
 #define KEEP_ALIVE_FOR_COMMUNICATION DEBUG_MODE
+
+#define DEBUG_PRINT_MOTOR 1
+#define DEBUG_IGNORE_MONT_CONTACT 1
+
