@@ -39,6 +39,7 @@
 #include "adc.h"
 #include "pid.h"
 #include "controller.h"
+#include "motor.h"
 
 #define B8 0x0000
 #define B16 0x8000
@@ -53,7 +54,8 @@ static uint16_t watch_map[] PROGMEM = {
     /* 03 */ ((uint16_t) &sumError) + B16,
 	/* 04 */ ((uint16_t) &CTL_temp_wanted) + B8,
 	/* 05 */ ((uint16_t) &CTL_temp_wanted_last) +B8,
-	/* 06 */ ((uint16_t) &CTL_temp_auto) +B8
+	/* 06 */ ((uint16_t) &CTL_temp_auto) +B8,
+	/* 07 */ ((uint16_t) &motor_diag) + B16
 };
 
 
